--- a/snippets/ajax-cart-template.liquid
+++ b/snippets/ajax-cart-template.liquid
@@ -33,6 +33,9 @@
                     {{#each this}}
                       {{#if this}}
                         <span class="ajaxcart__product-meta mid" data-is="{{this}}">{{formatKey @key}}: {{this}}</span>
+                        <span class="personalisation-note ajaxcart__product-meta mid" data-is="{{this}}">
+                          <p>additional charge will be applied at checkout.</p>
+                        </span>
                       {{/if}}
                     {{/each}}
                   {{/properties}}
@@ -48,7 +51,7 @@
                         <span class="fallback-text hidden" aria-hidden="true">&minus;</span>
                         <span class="hidden">{% endraw %}{{ 'cart.general.reduce_quantity' | t }}{% raw %}</span>
                       </button>
-                      <input type="text" name="updates[]" class="ajaxcart__qty-num" value="{{itemQty}}" min="0" data-id="{{key}}" data-line="{{line}}" aria-label="quantity" pattern="[0-9]*">
+                      <input disabled type="text" name="updates[]" class="ajaxcart__qty-num" value="{{itemQty}}" min="0" data-id="{{key}}" data-line="{{line}}" aria-label="quantity" pattern="[0-9]*">
                       <button data-operation="plus" type="button" class="ajaxcart__qty-adjust ajaxcart__qty--plus icon-fallback-text" data-id="{{key}}" data-line="{{line}}" data-qty="{{itemAdd}}">
                         <span class="icon icon-plus-circle" aria-hidden="true"></span>
                         <span class="fallback-text hidden" aria-hidden="true">+</span>
@@ -136,7 +139,7 @@
         <span class="fallback-text hidden" aria-hidden="true">&minus;</span>
         <span class="hidden">{% endraw %}{{ 'cart.general.reduce_quantity' | t }}{% raw %}</span>
       </button>
-      <input type="text" class="ajaxcart__qty-num" value="{{itemQty}}" min="0" data-id="{{key}}" aria-label="quantity" pattern="[0-9]*">
+      <input disabled type="text" class="ajaxcart__qty-num" value="{{itemQty}}" min="0" data-id="{{key}}" aria-label="quantity" pattern="[0-9]*">
       <button type="button" class="ajaxcart__qty-adjust ajaxcart__qty--plus icon-fallback-text" data-id="{{key}}" data-qty="{{itemAdd}}">
         <span class="icon icon-plus-circle" aria-hidden="true"></span>
         <span class="fallback-text hidden" aria-hidden="true">+</span>
@@ -153,7 +156,7 @@
         <span class="fallback-text hidden" aria-hidden="true">&minus;</span>
         <span class="hidden">{% endraw %}{{ 'cart.general.reduce_quantity' | t }}{% raw %}</span>
       </button>
-      <input type="text" class="js-qty__num" value="{{itemQty}}" min="1" data-id="{{key}}" aria-label="quantity" pattern="[0-9]*" name="{{inputName}}" id="{{inputId}}">
+      <input disabled type="text" class="js-qty__num" value="{{itemQty}}" min="1" data-id="{{key}}" aria-label="quantity" pattern="[0-9]*" name="{{inputName}}" id="{{inputId}}">
       <button type="button" class="js-qty__adjust js-qty__adjust--plus icon-fallback-text" data-id="{{key}}" data-qty="{{itemAdd}}">
         <span class="icon icon-plus-circle" aria-hidden="true"></span>
         <span class="fallback-text hidden" aria-hidden="true">+</span>
@@ -167,6 +170,14 @@
   span.ajaxcart__product-meta.mid {
     display: none !important;
   }
+    span.ajaxcart__product-meta.mid[data-is='personalised'] {
+    display: block !important;
+  }
+  .ajaxcart__product .item .personalisation-note p{
+    font-style: italic;
+    font-size: 12px;
+    color: #000;
+  }
 </style>
 <script>
   Handlebars.registerHelper('formatKey', function(key) {
@@ -174,5 +185,5 @@
       return 'Type';
     }
     return key;
-  });  
+  });
 </script>
