--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,5 +1,5 @@
 {{ 'gift-note-message.css' | asset_url | stylesheet_tag }}
-
+{% assign loadPersonalisedJs = false %}
 <script class="cartFlagX"></script>
 <div class="shopping-bag wrapper">
   <form action="/cart" method="post">
@@ -60,8 +60,10 @@
                 {% endif %}
                 {% comment %} personalisation {% endcomment %}
                 <tr
-                  class="{{ item.product.handle }}"
+                  class="line-item {{ item.product.handle }}"
                   data-personalisation="{{ isPersonalised }}"
+                  data-line="{{ forloop.index }}"
+                  data-key="{{ item.key }}"
                 >
                   <td class="image">
                     <a href="{{ collection_url }}{{ item.url }}">
@@ -125,6 +127,7 @@
                       <div class="qty-total">
                         <div class="bag-qty">
                           <input
+                            disabled
                             type="number"
                             name="updates[]"
                             id="updates_{{ item.id }}"
@@ -219,6 +222,11 @@
 
         <div class="bag-total order-table">
           <div class="top-section inner-section">
+            {% if loadPersonalisedJs %}
+              <div class="personalisation-note">
+                <p>£15 Personalization charge will be applied at checkout for each personalized product.</p>
+              </div>
+            {% endif %}
             <table>
               <tfoot>
                 <tr>
@@ -270,6 +278,37 @@
 </div>
 
 <style>
+    tr.personalisation-charge {
+    display: none;
+  }
+  tr.personalisation-charge .qty.product .qty-total .js-qty button {
+    display: none;
+  }
+  tr.personalisation-charge .product span {
+    display: none;
+  }
+  tr.personalisation-charge a {
+    pointer-events: none;
+  }
+  tr.personalisation-charge .product span.variant-title {
+    display: none;
+  }
+  .cart.ajaxcart .ajaxcart__product:has(a[href*='/products/personalisation-charge']) {
+    display: none;
+  }
+  .pointer-event-none {
+    pointer-events: none;
+  }
+
+  tr .product :is(._MID_Name, ._MID_Address, ._MID_Code) {
+    display: none !important;
+  }
+  .bag-total.order-table .personalisation-note p{
+    font-style: italic;
+    text-align: center;
+    line-height: normal;
+    color: brown;
+  }
   .template-cart .shopping-bag .bag-table.order-table {
     width: 65%;
   }
@@ -339,83 +378,18 @@
   }
 </style>
 
-{% comment %} redeye task start {% endcomment %}
-
-{% assign euCountryList = 'yt,au,de,fi,ad,at,by,be,ba,hr,cy,ee,fr,gr,ie,it,lv,lt,lu,mk,mt,mc,nl,pt,ru,sm,sk,si,es,ua,va,me,gp,mq,bl,mf,re' %}
-{% assign usCountryList = 'ca,us' %}
-{% assign uKCountryList = 'gb' %}
-{% assign isoCode = localization.country.iso_code | downcase %}
-{% assign zoneValue = '' %}
-
-{%- if euCountryList contains isoCode -%}
-  {% assign zoneValue = 'EU' %}
-{% elsif usCountryList contains isoCode %}
-  {% assign zoneValue = 'US' %}
-{% elsif uKCountryList contains isoCode %}
-  {% assign zoneValue = 'UK' %}
-{% else %}
-  {% assign zoneValue = 'UK' %}
-{%- endif -%}
-
-{% comment %} redeye task finish {% endcomment %}
-
 <script>
-jQuery(document).ready(function () {
-    if (localStorage.getItem('storedDiscount')){
-      var discountStored = localStorage.getItem('storedDiscount');
-      jQuery('input[name="discount"]').val(localStorage.getItem('storedDiscount'));
-    }
-    jQuery('form[action="/cart"]').on('submit', function(){
+  jQuery(document).ready(function () {
+      if (localStorage.getItem('storedDiscount')){
+        var discountStored = localStorage.getItem('storedDiscount');
+        jQuery('input[name="discount"]').val(localStorage.getItem('storedDiscount'));
+      }
+      jQuery('form[action="/cart"]').on('submit', function(){
 
-      var $discountCode = jQuery('input[name="discount"]').val();
-      localStorage.setItem('storedDiscount', $discountCode);
-    });
-});
-
-
-  //redeye task start
-  //redEye Integration for abandont basket event
-  const priceCalcualtion = (price) =>{
-    if(price.slice(-2) == '00'){
-      return (price.slice(0,-2)+'.00');
-    }
-    else{
-      return (price.slice(0,-2)+'.'+price.slice(-2));
-    }
-  }
-  const cartItems = {{ cart | json }};
-  const prodItems = [];
-  cartItems.items.forEach((item,index) => {
-    // console.log(item)
-  	const newItem = {};
-  	newItem['bask_name' + (index + 1)] = item.title;
-  	newItem['bask_image' + (index + 1)] = item.image.split('//')[1];
-  	newItem['bask_url' + (index + 1)] = "www.chintiandparker.com" + item.url;
-  	newItem['bask_size' + (index + 1)] = item.variant_options[0];
-  	newItem['bask_code' + (index + 1)] = item.id;
-  	newItem['bask_each_val' + (index + 1)] = priceCalcualtion(item.price.toString()),
-  	newItem['bask_items' + (index + 1)] = item.quantity;
-  	newItem['bask_val' + (index + 1)] = priceCalcualtion(item.original_line_price.toString());
-  
-  	prodItems.push(newItem);
-  
+        var $discountCode = jQuery('input[name="discount"]').val();
+        localStorage.setItem('storedDiscount', $discountCode);
+      });
   });
-  
-  let mainSource = 'https://reporting.chintiandparker.com/cgi-bin/rr/blank.gif?nourl=basket-event&bask_event=yes';
-  prodItems.forEach((item) => {
-    for (let key in item) {
-      mainSource += `&${key}=${item[key]}`;
-    }
-  });
-  
-  mainSource += `&bask_total_items=${cartItems.item_count}&bask_total_val=${priceCalcualtion(cartItems.total_price.toString())}&site={{ zoneValue }}&currency=${cartItems.currency}`;
-  let abandonItemsStructure = `<img src="${mainSource}" width="1" height="1" class="abandonItems"/>`;
-  if(document.querySelector('.abandonItems')){
-      document.querySelector('.abandonItems').remove();
-  };
-  
-  document.body.insertAdjacentHTML('beforeend', abandonItemsStructure);
-  //redeye task finish
 </script>
 
 {{ 'gift-note-message.js' | asset_url | script_tag }}
