--- a/snippets/header-actions.liquid
+++ b/snippets/header-actions.liquid
@@ -103,10 +103,57 @@
 
     <div id="cart-container">
       <div id="CartContainer"></div>
+      <div id="p-charge-add-loading" class="hidden">
+        <p class="loader">
+          Updating Please Wait
+          <span class="dot one">.</span>
+          <span class="dot two">.</span>
+          <span class="dot three">.</span>
+        </p>
+      </div>
     </div>
   </li>
 </ul>
 <style>
+  #p-charge-add-loading .loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #p-charge-add-loading .loader .dot {
+    display: inline;
+    margin-left: 0.2em;
+    margin-right: 0.2em;
+    opacity: 0;
+    font-size: 30px;
+    line-height: 1;
+    margin-top: -12px;
+    animation: showHideDot 1s ease-in-out infinite;
+
+    &.one {
+      animation-delay: 0.2s;
+    }
+    &.two {
+      animation-delay: 0.4s;
+    }
+    &.three {
+      animation-delay: 0.6s;
+    }
+  }
+  @keyframes showHideDot {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    60% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
   .header-telephone-icon a {
     position: relative;
   }
