cart note added

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -224,7 +224,7 @@
           <div class="top-section inner-section">
             {% if loadPersonalisedJs %}
               <div class="personalisation-note">
-                <p>Personalisation charge will be adjusted for personalised products.</p>
+                <p>Personalisation charge will be adjusted for personalised products at checkout or you will be contacted after the order is placed by our customer support team to collect the payment </p>
               </div>
             {% endif %}
             <table>
